# GreenGuardian-Automated-Weed-Detection-and-Elimination

./: README.md  cameraDetection.py  json_file_to_jsonl.py  keyboardControles.py  picoMotorControls.c  quickStopDetection.py
Simulation/: final_maze_algorythom.py  main.py  test.py
main/: backandforth.py  cameraDetection.py  imagesDetection.py  main.py  mainYellow.py  quickStopDetection.py  sparyDetection.py  weedDetection.py
main/imagesLabled/: 20210907_153931_x264_mp4-1002_jpg.rf.743a089349f2db9cf2d985423eda9b73.txt  20210907_153931_x264_mp4-1212_jpg.rf.35856c9a44655f1b8626fd6ffc70ae6e.txt  20210907_153931_x264_mp4-142_jpg.rf.fb66639c254cde2b2e692f63131a061f.txt  20210907_153931_x264_mp4-150_jpg.rf.8b7b0eaa92a2be2a1a386181e146ee5d.txt  20210907_153931_x264_mp4-1595_jpg.rf.a2eec5c4fcacc48763c487a186551362.txt  20210907_153931_x264_mp4-1617_jpg.rf.ee96fd772ebbd2bb67143944fbf376bc.txt  20210907_153931_x264_mp4-1732_jpg.rf.1a2b87ea8e8b4a90d77e942af87bec74.txt  20210907_153931_x264_mp4-509_jpg.rf.d4c33335b1c392f3f7fb781419ff976d.txt  20210907_153931_x264_mp4-524_jpg.rf.9d035e1fd34c38e9706022a36a5ce625.txt  20210907_153931_x264_mp4-555_jpg.rf.84f9edfadbb6645d7343af96fc7ad517.txt  20210907_153931_x264_mp4-583_jpg.rf.76486bd4aec69313e29d57c947f8cb2d.txt  20210907_153931_x264_mp4-591_jpg.rf.f9827660da77689fbbda47e7c45d42e4.txt  20210907_153931_x264_mp4-592_jpg.rf.d751b1ee847a86c2ce37f380e56e8708.txt  20210907_153931_x264_mp4-727_jpg.rf.069fea0e77145569d11e349b03a88756.txt  52752_jpg.rf.034df2398ebf27559bd62efb4cc73300.txt  (+17 more)
pico_files/: CMakeLists.txt  picoMotorControls.c
(+7 files in other folders)
